--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -48,9 +48,9 @@ body {
   }
   
   .section-header {
-    text-align: var(--section_header-align);
+    text-align: var(--section-header-align);
   }
-  
+
   .section-tagline {
     color: var(--color-primary);
   }
