--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -392,9 +392,9 @@ html {
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 0.04em;
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 3em 0;
+    --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
   }
   
@@ -485,6 +485,10 @@ body {
     padding: var(--footer-padding);
   }
 
+  .navbar-menu {
+    float: right;
+  }
+
   nav {
     margin: 0;
     padding: 0;
@@ -518,7 +522,5 @@ body {
     color: var(--nav-item-link-hover);
   }
 
-  .navbar-menu {
-    float: right;
-  }
+  
   
