--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -406,20 +406,20 @@ body {
     line-height: var(--line-height-base);
   }
   
-  a {
+  a[href] {
     color: var(--text-color);
     text-decoration: none;
   }
 
-  a:link, a:visited {
+  a[href]:link, a[href]:visited {
     font-style: italic;
   }
 
-  a:hover {
+  a[href]:hover {
     text-decoration: underline;
   }
 
-  a:active {
+  a[href]:active {
     background-color: var(--color-light-grey);
   }
   
@@ -485,14 +485,14 @@ body {
     float: right;
   }
 
-  nav {
+  .nav {
     margin: 0;
     padding: 0;
     list-style: none;
     text-align: center;
   }
 
-  nav .nav-item {
+  .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -501,12 +501,12 @@ body {
     margin: var(--nav-item-margin);
   }
   
-  nav .nav-link {
+  .nav .nav-link {
     display: block;
     padding: 0.5rem 1rem;
   }
 
-  nav .nav-link:hover {
+  .nav .nav-link:hover {
     color: var(--nav-item-link-hover);
   }
 
