--- a/CSS_advanced/21-style.css
+++ b/CSS_advanced/21-style.css
@@ -450,6 +450,10 @@ body {
     text-align: var(--section-footer-align);
   }
 
+  .footer {
+    padding: var(--footer-padding);
+}
+
   .section-title {
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
@@ -460,7 +464,7 @@ body {
   .section-tagline {
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
+    font-weight: var(--font-family-bold);
     margin: var(--section-tagline-margin);
   }
 
@@ -474,7 +478,7 @@ body {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
   }
-  
+
   .footer {
     padding: var(--footer-padding);
   }
@@ -516,10 +520,14 @@ body {
 
   .col-1-3 {
     width: 33.33%;
+    float: left;
+    padding: 0.5rem;
   }
 
   .col-1-2 {
     width: 50%;
+    float: left;
+    padding: 0.5rem;
   }
 
   .footer-copyright {
