--- a/CSS_advanced/21-style.css
+++ b/CSS_advanced/21-style.css
@@ -197,7 +197,6 @@
   [type="reset"],
   [type="submit"] {
     -webkit-appearance: button;
-    appearance: button;
   }
   
   /**
@@ -290,7 +289,6 @@
   
   [type="search"] {
     -webkit-appearance: textfield; /* 1 */
-    appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
   }
   
@@ -349,100 +347,28 @@
   [hidden] {
     display: none;
   }
-  
-  /* ================= Custom styles =================*/
-  
-   *,
-   *::before,
-   *::after {
-      box-sizing: border-box;
-   }
-  
-  html {
+
+/* Add a universal rule for box-sizing */
+*,
+*::before,
+*::after {
+box-sizing: border-box;
+}
+
+html {
     scroll-behavior: smooth;
-    font-size: 0.625em;
+    font-size: 62.5%;
   }
-  
-  body, a {
-    color: var(--text-color);
-    font-family: var(--font-family-base);
-    font-size: var(--font-size-medium);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
-  }
-  
-  a[href] {
-    text-decoration: none;
-  }
-  
-  a[href]:visited {
-    font-style: italic;
-  }
-  
-  a[href]:hover {
-    text-decoration: underline;
-  }
-  
-  a[href]:active {
-    background-color: var(--color-light-grey);
-  }
-  
-  .visually-hidden {
-    display: none;
-  }
-  
-  .card-category, .section-tagline {
-    color: var(--color-primary);
-  }
-  
-  .section {
-    padding: var(--section-padding);
-  }
-  
-  .section-header {
-    text-align: var(--section-header-align);
-    padding: var(--section-header-padding)
-  }
-  
-  .section-body {
-    padding: var(--section-body-padding);
-  }
-  
-  .section-footer {
-    padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align);
-  }
-  
-  .section-tagline {
-    font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-tagline-margin);
-  }
-  
-  .container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .section-title{
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-title-margin);
-    color: var(--section-title-color);
-  }
-  
-  :root {
+
+:root {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    --font-family-base:"Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title:"Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -473,26 +399,97 @@
     --section-tagline-margin: 0;
   }
   
+body {
+    color: var(--text-color);
+    font-family: var(--font-family-base);
+    font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
+    line-height: var(--line-height-base);
+  }
+  
+  a[href] {
+    color: var(--text-color);
+    text-decoration: none;
+  }
+
+  a[href]:link, a[href]:visited {
+    font-style: italic;
+  }
+
+  a[href]:hover {
+    text-decoration: underline;
+  }
+
+  a[href]:active {
+    background-color: var(--color-light-grey);
+  }
+  
+  .visually-hidden {
+    display: none;
+  }
+  
+  .card-category, .section-tagline {
+    color: var(--color-primary);
+  }
+  
+  .section {
+    padding: var(--section-padding);
+  }
+
+  .section-header {
+    padding: var(--section-header-padding);
+    text-align: var(--section-header-align);
+  }
+
+  .section-body {
+    padding: var(--section-body-padding);
+  }
+
+  .section-footer {
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
+  }
+
+  .section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
+  }
+  .section-tagline {
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-family-bold);
+    margin: var(--section-tagline-margin);
+  }
+
+  .container {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
   }
-  
+
   .footer {
     padding: var(--footer-padding);
   }
-  
+
   .navbar-menu {
     float: right;
   }
-  
+
   .nav {
     margin: 0;
     padding: 0;
+    list-style: none;
     text-align: center;
-    list-style-type: none;
   }
-  
+
   .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
@@ -506,41 +503,41 @@
     display: block;
     padding: 0.5rem 1rem;
   }
-  
+
   .nav .nav-link:hover {
-    color: var(--nav-item-link-hover)
+    color: var(--nav-item-link-hover);
   }
-  
+
   ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
   }
-  
+
   .col-1-3 {
     width: 33.33%;
   }
-  
+
   .col-1-2 {
     width: 50%;
   }
-  
+
   .footer-copyright {
     margin: 0;
     font-size: var(--font-size-small);
-    color: var(--text-color)
+    color: var(--text-color);
   }
-  
+
   .footer ul {
     text-align: right;
   }
   
-  .row::after {
+  .row::after{
     content: "";
     display: table;
     clear: both;
   }
-  
+
   [class^="col-"] {
     float: left;
     padding: 0.5rem;
