correctrion section tagline font weight

--- a/CSS_advanced/21-style.css
+++ b/CSS_advanced/21-style.css
@@ -460,7 +460,7 @@ body {
   .section-tagline {
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-family-bold);
+    font-weight: var(--font-weight-bold);
     margin: var(--section-tagline-margin);
   }
 
