class * plutot que ^

--- a/CSS_advanced/21-style.css
+++ b/CSS_advanced/21-style.css
@@ -352,7 +352,7 @@
 *,
 *::before,
 *::after {
-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
@@ -514,7 +514,7 @@ body {
     list-style: none;
   }
 
-  [class^="col-"] {
+  [class*="col-"] {
     float: left;
     padding: 0.5rem;
   }
