--- a/CSS_advanced/21-style.css
+++ b/CSS_advanced/21-style.css
@@ -1,4 +1,4 @@
-/* Ajoute une règle universelle pour la taille de boîte */
+/* Add a universal rule for box size */
 *,
 *::before,
 *::after {
@@ -11,42 +11,42 @@ html {
 }
 
 :root {
-  --color-primary: #d73953;
-  --color-black: #090909;
-  --color-white: #ffffff;
-  --color-light-grey: #f3f3f3;
-  --color-dark-grey: #353535;
-  --text-color: var(--color-black);
-  --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  --font-size-small: 1.2rem;
-  --font-size-medium: 1.6rem;
-  --font-size-large: 1.8rem;
-  --font-size-x-large: 2.3rem;
-  --font-size-xx-large: 4.8rem;
-  --font-weight-regular: 400;
-  --font-weight-bold: 700;
-  --line-height-small: 1.2;
-  --line-height-base: 1.5;
-  --line-height-big: 1.8;
-  --section-header-align: center;
-  --section-tagline-transform: uppercase;
-  --section-title-margin: 0;
-  --section-title-color: var(--color-black);
-  --section-padding: 5rem 0;
-  --section-header-padding: 0 0 3rem;
-  --section-body-padding: 0 0 3rem;
-  --section-footer-padding: 3rem 0 0;
-  --section-footer-align: center;
-  --footer-padding: 5rem 0 1rem;
-  --nav-item-font-family: var(--font-family-title);
-  --nav-item-font-weight: var(--font-weight-bold);
-  --nav-item-font-size: var(--font-size-medium);
-  --nav-item-letter-spacing: 0.04rem;
-  --nav-item-display: inline-block;
-  --nav-item-margin: 0 0 3rem 0;
-  --nav-item-link-hover: var(--color-primary);
-  --section-tagline-margin: 0;
+    --color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black);
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-size-small: 1.2rem;
+    --font-size-medium: 1.6rem;
+    --font-size-large: 1.8rem;
+    --font-size-x-large: 2.3rem;
+    --font-size-xx-large: 4.8rem;
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
+    --line-height-small: 1.2;
+    --line-height-base: 1.5;
+    --line-height-big: 1.8;
+    --section-header-align: center;
+    --section-tagline-transform: uppercase;
+    --section-title-margin: 0;
+    --section-title-color: var(--color-black);
+    --section-padding: 5rem 0;
+    --section-header-padding: 0 0 3rem;
+    --section-body-padding: 0 0 3rem;
+    --section-footer-padding: 3rem 0 0;
+    --section-footer-align: center;
+    --footer-padding: 5rem 0 1rem;
+    --nav-item-font-family: var(--font-family-title);
+    --nav-item-font-weight: var(--font-weight-bold);
+    --nav-item-font-size: var(--font-size-medium);
+    --nav-item-letter-spacing: 0.04rem;
+    --nav-item-display: inline-block;
+    --nav-item-margin: 0 0 3rem 0;
+    --nav-item-link-hover: var(--color-primary);
+    --section-tagline-margin: 0;
 }
 
 body {
@@ -161,14 +161,14 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--nav-item-link-hover);
 }
 
-/* Réinitialisation des marges et des paddings pour les listes */
+/* Reset margins and paddings for lists */
 ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-/* Styles pour les colonnes */
+/* Styles for columns */
 [class^="col-"] {
     float: left;
     padding: 0.5rem;
@@ -182,7 +182,7 @@ ul.row {
     width: 50%;
 }
 
-/* Styles pour le pied de page */
+/* Styles for the footer */
 .footer-copyright {
     margin: 0;
     font-size: var(--font-size-small);
@@ -193,7 +193,7 @@ ul.row {
     text-align: right;
 }
 
-/* Clearfix pour les rangées */
+/* Clearfix for rows */
 .row::after {
     content: "";
     display: table;
