--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -324,7 +324,7 @@ ul.row {
     height: 0.2rem;
 }
 
-.nav .nav-link:hover .nav-link:before {
+.nav .nav-link:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
