--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -341,7 +341,7 @@ ul.row {
     overflow: hidden;
 }
 
-.card-work .card-image img {
+.card-work:hover .card-image img {
     height: 30rem;
     width: 100%;
     object-fit: cover;
