--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -339,14 +339,25 @@ ul.row {
 .card-work .card-outer {
     position: relative;
     overflow: hidden;
+    transition-property: transform;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-cubic-bezier);
 }
 
-.card-work:hover .card-image img {
+.card-work .card-image img {
     height: 30rem;
     width: 100%;
     object-fit: cover;
     vertical-align: bottom;
-    transition: var(--transition-duration) var(--transition-cubic-bezier);
+    transition: transform var(--transition-duration) var(--transition-cubic-bezier);
+}
+
+.card-work:hover .card-image img {
+    transform: scale(1.2);
+}
+
+.card-work:hover .card-outer {
+    transform: scale(0.95);
 }
 
 .card-work .card-inner {
